# Range-Proof

./: .gitignore  README.md  aiken.toml
lib/: constants.ak  pedersen.ak  range.ak  schnorr.ak  zk_interval.ak
paper/: references.bib  zkInterval-2024.abstract  zkInterval-2024.aux  zkInterval-2024.bib  zkInterval-2024.blg  zkInterval-2024.tex  zkInterval-2025.aux  zkInterval-2025.bbl  zkInterval-2025.blg  zkInterval-2025.out  zkInterval-2025.tex
paper/2024/: zkInterval-2024.out  zkInterval-2024.tex
paper/iacrcc/: template.abstract  template.aux  template.out
paper/iacrcc/tests/test29/: main.tex
py/: .gitignore  README.md  example.proof.cbor  zk_interval.py
py/src/: blake2b_224.py  bls12_381.py  commitment.py  element.py  range.py  util.py
py/tests/: test_blake2b_224.py  test_bls12_381.py  test_commitment.py  test_element.py  test_range.py
rs/: .gitignore  Cargo.toml  README.md
rs/benches/: zk_interval.rs
rs/src/: constants.rs  hashing.rs  lib.rs  pedersen.rs  range.rs  schnorr.rs
rs/tests/: constants_test.rs  hashing_test.rs  pedersen_test.rs  range_test.rs  schnorr_test.rs  zk_interval_test.rs
