[package]
name = "rs"
version = "0.1.0"
description = "Benchmark testing for zkInterval"
authors = ["Logical Mechanism LLC <support@logicalmechanism.io>"]
edition = "2024"

[dependencies]
blake2 = "0.10.6"
blstrs = "0.7.1"
ff = "0.13.1"
group = "0.13.0"
hex = "0.4.3"
hex-literal = "1.0.0"
rand_core = { version = "0.6.0", features = ["std"] }

[dev-dependencies]
criterion = "0.5.1"